# hot-key-app

./: .gitignore  CMakeLists.txt  linux-wayland.chat.cpp  linux-wayland.cpp  main-linux.cpp  main-windows.cpp  setun-gnome-hotkey.sh  setup-hotkey-linux.cpp  text
CppApp/: .gitignore
CppApp/src/: linux-wayland.cpp  linux-x11.cpp  setup-hotkey-lib.cpp  setup-hotkey-linux.cpp
include/: capture_key_terminal.h  setup-hotkey-lib.h
server/: database.sqlite  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  zametki.txt
server/data/: database.sqlite
server/prisma/: schema.prisma
server/prisma/migrations/20260428074716_dev/: migration.sql
server/src/: app.module.ts  main.ts  prisma.ts  server.ts
server/src/deaths/: deaths.controller.ts  deaths.service.ts
server/src/deaths/dto/: create-death.dto.ts
server/src/deaths/entities/: death.entity.ts
server/src/obs/: obs.module.ts  obs.service.ts
server/src/obs/entities/: obs.entity.ts
server/src/prisma/: prisma.service.ts
server/src/s3/: s3.controller.ts  s3.service.ts
src/: capture_key_terminal.cpp  linux-wayland.cpp  setup-hotkey-linux.cpp
